src/containers/Editor/Editor.css
h1.title {
    font-family: "monospace";
    color: #011f4b;
}

h2 {
    color: #03396c;
}

i {
    color: black;
}

.editor {
    margin: 10px 10px;
    border: none;
} 

textarea{
    font-family: "monospace";
    border-radius: 5px;
}

textarea:focus {
    border-color: #011f4b;
}

div.row div.btn-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-family: "monospace";
    color: #03396c !important;
}

.btn {
    margin: 10px auto !important;
    transition: background-color .4s;
}

.btn:hover {
    transition: background-color .4s;
}


.btn:focus, .btn:active {
  outline: none !important;
}

p>a>i {
    padding: 0px 5px;
}

i {
    color: #011f4b;
}

